
5.11  2014-06-29

5.10  2014-06-28
  - Added cleanup attribute to Mojo::Server::Prefork.
  - Improved Mojo::Server::Prefork to keep sending heartbeat messages when
    stopping gracefully.
  - Fixed small bug where Mojo::Server::Daemon was too eager to reconfigure
    Mojo::IOLoop.
  - Fixed small bug where Hypnotoad would clean up process id and lock files
    too early.

5.09  2014-06-24
  - Improved .ep templates to make the current controller available as $c.

5.08  2014-06-17
  - Added reset method to Mojo::IOLoop.
  - Added reset method to Mojo::Reactor.
  - Added reset method to Mojo::Reactor::Poll.

5.07  2014-06-13
  - Fixed RFC 7230 compliance bugs in Mojo::Headers.

5.06  2014-06-11
  - Added deserialize and serialize attributes to Mojolicious::Sessions.
  - Improved redirect_to to behave more like url_for.
  - Fixed bug in Mojo::UserAgent where HTTP/1.0 connections were sometimes
    kept alive.

5.05  2014-06-08
  - Fixed parsing of header fields with single character names in
    Mojo::Headers. (crab)

5.04  2014-06-03
  - Added expect_close attribute to Mojo::Content.
  - Improved support for broken responses to CONNECT requests.

5.03  2014-06-02
  - Fixed bug where Mojo::DOM::HTML could not handle certain broken tags.

5.02  2014-05-31
  - Added multi-name support to cookie and signed_cookie methods in
    Mojolicious::Controller.
  - Added multi-name support to cookie and upload methods in Mojo::Message.
  - Improved Mojolicious::Command::generate::plugin to use better directory
    names.
  - Fixed bug where Mojo::DOM::HTML could not handle tags with lots of
    attributes.

5.01  2014-05-30
  - Fixed continuation line handling in Mojo::Headers.

5.0  2014-05-29
  - Code name "Tiger Face", this is a major release.
  - Changed heuristics for number detection in Mojo::JSON to better line up
    with user expectations.
  - Changed lock and unlock callbacks in Mojo::IOLoop to not receive an
    invocant.