@@ -35,6 +35,7 @@ my $t = Test::Mojo->new;
 
 # Required and optional values
 my $validation = $t->app->validation->input({foo => 'bar', baz => 'yada'});
+is_deeply [$validation->error], [], 'no names';
 ok $validation->required('foo')->is_valid, 'valid';
 is_deeply $validation->output, {foo => 'bar'}, 'right result';
 is $validation->param('foo'), 'bar', 'right value';
@@ -70,6 +71,7 @@ ok !$validation->optional('yada')->equal_to('foo')->is_valid, 'not valid';
 is_deeply $validation->output, {foo => 'bar'}, 'right result';
 ok $validation->has_error, 'has error';
 is_deeply $validation->error('yada'), [qw(equal_to 1 foo)], 'right error';
+is_deeply [$validation->error], [qw(baz yada)], 'right names';
 
 # In
 $validation = $t->app->validation->input(
@@ -81,6 +83,7 @@ ok !$validation->required('baz')->in(qw(yada whatever))->is_valid, 'not valid';
 is_deeply $validation->output, {foo => [qw(bar whatever)]}, 'right result';
 ok $validation->has_error, 'has error';
 is_deeply $validation->error('baz'), [qw(in 1 yada whatever)], 'right error';
+is_deeply [$validation->error], ['baz'], 'right names';
 
 # Like
 $validation = $t->app->validation->input({foo => 'bar', baz => 'yada'});
