@@ -1,5 +1,7 @@
 
 5.11  2014-06-29
+  - Improved error method in Mojolicious::Validator::Validation to return
+    field names when called without arguments.
 
 5.10  2014-06-28
   - Added cleanup attribute to Mojo::Server::Prefork.
